# rust-polkadot-hub

./: README.md
exercise/: iterate.sh
exercise/L01-02/: curso_rust_01-02_ControlFlow.ipynb  curso_rust_01-02_DataTypes.ipynb  curso_rust_01-02_HolaMundo.ipynb
exercise/L01-02/.ipynb_checkpoints/: curso_rust_01-02_DataTypes-checkpoint.ipynb  curso_rust_01-02_HolaMundo-checkpoint.ipynb
exercise/L01_02/: Cargo.toml
exercise/L01_02/src/: main.rs
exercise/L01_02/tests/: if1.rs  if2.rs  primitive_types1.rs  primitive_types2.rs  primitive_types3.rs  primitive_types4.rs  primitive_types5.rs  primitive_types6.rs  variables1.rs  variables2.rs  variables3.rs  variables4.rs  variables5.rs  variables6.rs
exercise/L03/: Cargo.toml
exercise/L03-2/variablerules/: Cargo.toml
exercise/L03/tests/: functions1.rs  functions2.rs  functions3.rs  functions4.rs  functions5.rs  lifetimes1.rs  lifetimes2.rs
exercise/L04/: Cargo.toml
exercise/L04-2/lifecyclevariables/: Cargo.toml
exercise/L04-2/matchinstruction/: Cargo.toml
exercise/L04-2/structs3/: Cargo.toml
exercise/L04-2/structs5/: Cargo.toml
exercise/L04/tests/: enums1.rs  enums2.rs  enums3.rs  structs1.rs  structs2.rs  structs3.rs
exercise/L05/: Cargo.toml
exercise/L05-2/boxingerror/: Cargo.toml
exercise/L05-2/customerror/: Cargo.toml
exercise/L05-2/parseerror/: Cargo.toml
exercise/L05-2/vectorandhashmap/: Cargo.toml
exercise/L06/: Cargo.toml
exercise/L06-2/externalcrate/: Cargo.toml
exercise/L06-2/externalcrate/src/: lib.rs
exercise/results_l01_02/: Cargo.toml
exercise/src/: main.rs
(+54 files in other folders)
